@@ -19,6 +19,78 @@
 			<artifactId>openxava</artifactId>
 			<version>7.0-SNAPSHOT</version>
 		</dependency>
+		
+		<!-- 
+		Para acceder a tu base de datos descomenta la entrada correspondiente 
+		de las dependencias de abajo. Si no encuentras la tuya, busca en
+		internet por la dependencia maven para tu base de datos y añádela
+		aquí tu mismo.
+		-->
+		
+		<!-- MySQL 
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>		
+    		<version>8.0.29</version>
+		</dependency>
+		-->
+		
+		<!-- PostgreSQL 
+		<dependency>
+			<groupId>org.postgresql</groupId>
+    		<artifactId>postgresql</artifactId>
+    		<version>42.4.0</version>
+		</dependency>
+		-->
+		
+		<!-- Oracle 
+		<dependency>
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc8</artifactId>
+			<version>21.5.0.0</version>
+		</dependency>
+		-->
+		
+		<!-- AS/400
+		<dependency>
+			<groupId>net.sf.jt400</groupId>
+			<artifactId>jt400</artifactId>
+			<version>11.0</version>
+		</dependency>
+		-->
+		
+		<!-- Microsoft SQL Server
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+    		<version>10.2.1.jre8</version>
+		</dependency>
+		-->
+		
+		<!-- Informix
+		<dependency>
+			<groupId>com.ibm.informix</groupId>
+			<artifactId>jdbc</artifactId>
+			<version>4.50.8</version>
+		</dependency>
+		-->
+		
+		<!-- Db2
+		<dependency>
+			<groupId>com.ibm.db2</groupId>
+			<artifactId>jcc</artifactId>
+			<version>11.5.7.0</version>
+		</dependency>
+		-->
+		
+		<!-- Firebird
+		<dependency>
+			<groupId>org.firebirdsql.jdbc</groupId>
+			<artifactId>jaybird</artifactId>
+			<version>4.0.6.java8</version>
+		</dependency>
+		-->
+		
 	</dependencies>
 
 	<build>
