@@ -6,9 +6,9 @@
 	
 	<!-- 
 	To define the access to your database uncomment the corresponding one
-	from the below configurations. If you don't find the yours, look in
-	internet for the JDBC URL and driver class for your database and define 
-	your own Resource entry.
+	from the below configurations. If you don't find yours, look in internet 
+	for the JDBC URL and driver class for your database and define your 
+	own Resource entry.
 	
 	You have to adapt the URL to match your server, and maybe the port.
 	You have to define the correct user name and password for your database.
@@ -50,6 +50,34 @@
 	      maxTotal="20" maxIdle="5" maxWaitMillis="10000"
 	      username="user" password="" 
 	      url="jdbc:as400:localhost"/>
+	-->
+	
+	<!-- Microsoft SQL Server
+	<Resource name="jdbc/yourappDS" auth="Container" type="javax.sql.DataSource"
+	      maxTotal="20" maxIdle="5" maxWaitMillis="10000"
+	      username="user" password="" 
+	      url="jdbc:sqlserver://localhost:1433;databaseName=yourappdb"/>
+	-->
+	
+	<!-- Informix
+	<Resource name="jdbc/yourappDS" auth="Container" type="javax.sql.DataSource"
+	      maxTotal="20" maxIdle="5" maxWaitMillis="10000"
+	      username="user" password="" 
+	      url="jdbc:informix-sqli://localhost:1533/yourappdb:INFORMIXSERVER=yourserver"/>
 	-->            
+	
+	<!-- Db2
+	<Resource name="jdbc/yourappDS" auth="Container" type="javax.sql.DataSource"
+	      maxTotal="20" maxIdle="5" maxWaitMillis="10000"
+	      username="user" password="" 
+	      url="jdbc:db2://localhost:50000/yourappdb"/>
+	-->
+	
+	<!-- Firebird
+	<Resource name="jdbc/yourappDS" auth="Container" type="javax.sql.DataSource"
+	      maxTotal="20" maxIdle="5" maxWaitMillis="10000"
+	      username="user" password="" 
+	      url="jdbc:firebirdsql://localhost:3050/c:/db/yourapp.fdb"/>
+	-->
 	      	      
 </Context>
